WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66257
New XML parser: Re-entering a character node should not clobber the buffered characters
https://bugs.webkit.org/show_bug.cgi?id=66257
Summary
New XML parser: Re-entering a character node should not clobber the buffered ...
Vicki Pfau
Reported
2011-08-15 15:07:07 PDT
New XML parser: Re-entering a character node should not clobber the buffered characters
Attachments
Patch
(1.21 KB, patch)
2011-08-15 15:08 PDT
,
Vicki Pfau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Vicki Pfau
Comment 1
2011-08-15 15:08:23 PDT
Created
attachment 103960
[details]
Patch
WebKit Review Bot
Comment 2
2011-08-15 16:18:40 PDT
Comment on
attachment 103960
[details]
Patch Clearing flags on attachment: 103960 Committed
r93067
: <
http://trac.webkit.org/changeset/93067
>
WebKit Review Bot
Comment 3
2011-08-15 16:18:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug