New XML parser: Re-entering a character node should not clobber the buffered characters https://bugs.webkit.org/show_bug.cgi?id=66257

Reviewed by Adam Barth.

* xml/parser/XMLTreeBuilder.cpp:
(WebCore::XMLTreeBuilder::enterText):


git-svn-id: svn://svn.chromium.org/blink/trunk@93067 bbb929c8-8fbe-4397-9dbb-9b2b20218538