third_party/WebKit/Source/WebCore/xml/parser/XMLTreeBuilder.cpp
@@ -336,7 +336,8 @@ void XMLTreeBuilder::enterText()
         return;
     }
 
-    m_leafText = adoptPtr(new StringBuilder());
+    if (!m_leafText)
+        m_leafText = adoptPtr(new StringBuilder());
 }
 
 void XMLTreeBuilder::exitText()
